# passport-circuits

./: .gitignore  Cargo.toml  Dockerfile  README.md
circuits/: Cargo.toml
circuits/src/: date.rs  filecoin.rs  lib.rs  passport.rs  verify_age.rs  verify_age_and_nationality.rs
generator/: .env.example  Cargo.toml  build_android_lib.sh  copy_android_lib.sh
generator/src/: lib.rs  main.rs  pgen.rs
server/: Cargo.toml
server/src/: ctx.rs  lib.rs  main.rs  storage.rs
server/src/routes/: mod.rs
server/src/routes/home/: mod.rs
server/src/routes/verify_proof/: mod.rs
