[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[lib]
name = "circuits"
crate-type = ["cdylib"]

[dependencies]
circuits = { path = "../circuits" }
midnight-zk-stdlib = { workspace = true }
midnight-circuits = { workspace = true }
midnight-curves = { workspace = true }
midnight-proofs = { workspace = true }
hex-literal = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }
blake2b_simd = "1"                                            # MSRV 1.66.0
rand = { version = "0.8" }
rand_core = { version = "0.6", default-features = false }
jni = "0.21.1"
once_cell = "1.18.0"
dotenvy = "0.15.7"