[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
circuits = { path = "../circuits" }
midnight-zk-stdlib = { workspace = true }
midnight-circuits = { workspace = true }
midnight-curves = { workspace = true }
midnight-proofs = { workspace = true }
hex = { workspace = true }
num-bigint.workspace = true
blake2b_simd = "1"                                            # MSRV 1.66.0
rand = { version = "0.8" }
rand_core = { version = "0.6", default-features = false }
axum = "0.8.6"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing-subscriber = "0.3.20"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
serde = "1.0.228"
thiserror = "2.0.17"
http-body-util = "0.1.3"
rusqlite = { version = "0.38.0", features = ["bundled-sqlcipher"] }
